# ExpressionParseTree-In-C

./: .gitignore  ExpressionParseTree-In-C.doxyfile  InputSanitation.c  InputSanitation.h  README.md  Solving Equations.c  Solving-Equations.c  autogen.sh  configure.ac  makefile  parser grammar.txt
include/: buildinfo.h  config.h.in  input.h  lexer.h  memwrapper.h  parser.h  parsergen.h  parsergraph.h  parserutil.h  ptrstack.h  stringstack.h  switches.h  token.h
src/: input.c  lexer.c  main.c  makefile.am  memwrapper.c  parser.c  parsergen.c  parsergraph.c  parserutil.c  ptrstack.c  stringstack.c  token.c
